fixed config submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "coffee-service"]
 	path = coffee-service
 	url = https://github.com/yogendra/SCSedge-service.git
+[submodule "config"]
+	path = config
+	url = https://github.com/yogendra/SCSconfig.git
